[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "with_icon"
path = "examples/with_icon.rs"

[[example]]
name = "multiple_types"
path = "examples/multiple_types.rs"

[[example]]
name = "with_options"
path = "examples/with_options.rs"

[[example]]
name = "error_handling"
path = "examples/error_handling.rs"

[package]
name = "gntp"
version = "0.1.4"
edition = "2021"
authors = [ "Hadi Cahyadi <cumulus13@gmail.com>",]
description = "A complete Growl Notification Transport Protocol (GNTP) client library for Rust"
documentation = "https://docs.rs/gntp"
homepage = "https://github.com/cumulus13/gntp"
repository = "https://github.com/cumulus13/gntp"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [ "gntp", "growl", "notification", "desktop", "alert",]
categories = [ "api-bindings", "network-programming",]
rust-version = "1.70"

[dev-dependencies]

[dependencies.uuid]
version = "1.6"
features = [ "v4",]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs",]
